--- a/FlickerDemoApp/Base.lproj/Main.storyboard
+++ b/FlickerDemoApp/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -30,9 +31,44 @@
                     <view key="view" contentMode="scaleToFill" id="jfZ-zS-StJ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="R12-bn-FbQ">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="kus-4k-KWD">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Fly-hJ-cNt">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="kCB-Gg-CCR">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="cDL-Eu-DB4" id="Rlu-uP-aJG"/>
+                                    <outlet property="delegate" destination="cDL-Eu-DB4" id="icJ-7D-Cx9"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="ryU-kf-05W" firstAttribute="bottom" secondItem="R12-bn-FbQ" secondAttribute="bottom" id="Tmh-qn-p5d"/>
+                            <constraint firstItem="R12-bn-FbQ" firstAttribute="leading" secondItem="ryU-kf-05W" secondAttribute="leading" id="UgE-2x-HtE"/>
+                            <constraint firstItem="R12-bn-FbQ" firstAttribute="top" secondItem="ryU-kf-05W" secondAttribute="top" id="kpN-7B-3o1"/>
+                            <constraint firstItem="ryU-kf-05W" firstAttribute="trailing" secondItem="R12-bn-FbQ" secondAttribute="trailing" id="xJR-SO-2Xh"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="ryU-kf-05W"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="R12-bn-FbQ" id="MGM-vV-aSV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kMG-eT-X6Y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
