--- a/FlickrDemo/Views/Base.lproj/Main.storyboard
+++ b/FlickrDemo/Views/Base.lproj/Main.storyboard
@@ -35,20 +35,46 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="R12-bn-FbQ">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="kus-4k-KWD">
-                                    <size key="itemSize" width="128" height="128"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="kus-4k-KWD">
+                                    <size key="itemSize" width="211" height="270"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Fly-hJ-cNt">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCollectionViewCell" id="Fly-hJ-cNt" customClass="PhotoCollectionViewCell" customModule="FlickrDemo" customModuleProvider="target">
+                                        <rect key="frame" x="101.5" y="0.0" width="211" height="270"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="kCB-Gg-CCR">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="211" height="270"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hvM-IN-0U5">
+                                                    <rect key="frame" x="0.0" y="0.0" width="211" height="242"/>
+                                                    <color key="backgroundColor" red="0.75406885150000003" green="0.75408679249999999" blue="0.75407713649999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TitleLabel TitleLabel TitleLabel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Jh-gB-Wgi">
+                                                    <rect key="frame" x="0.0" y="250" width="211" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="8Jh-gB-Wgi" secondAttribute="trailing" id="76v-W5-zDH"/>
+                                                <constraint firstItem="hvM-IN-0U5" firstAttribute="leading" secondItem="kCB-Gg-CCR" secondAttribute="leading" id="JiK-jU-ady"/>
+                                                <constraint firstAttribute="trailing" secondItem="hvM-IN-0U5" secondAttribute="trailing" id="Nu2-CJ-TTO"/>
+                                                <constraint firstAttribute="bottom" secondItem="8Jh-gB-Wgi" secondAttribute="bottom" id="cF2-dc-cMk"/>
+                                                <constraint firstItem="8Jh-gB-Wgi" firstAttribute="leading" secondItem="kCB-Gg-CCR" secondAttribute="leading" id="fDC-ap-VGJ"/>
+                                                <constraint firstItem="hvM-IN-0U5" firstAttribute="top" secondItem="kCB-Gg-CCR" secondAttribute="top" id="xu0-Zb-nlX"/>
+                                                <constraint firstItem="8Jh-gB-Wgi" firstAttribute="top" secondItem="hvM-IN-0U5" secondAttribute="bottom" constant="8" id="ylU-oX-Spm"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
+                                        <size key="customSize" width="211" height="270"/>
+                                        <connections>
+                                            <outlet property="photoImageView" destination="hvM-IN-0U5" id="GZf-y2-c6t"/>
+                                            <outlet property="titleLabel" destination="8Jh-gB-Wgi" id="Yvs-yh-qL9"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
@@ -72,7 +98,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kMG-eT-X6Y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1988" y="138"/>
+            <point key="canvasLocation" x="1986.9565217391305" y="137.94642857142856"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="KyI-qe-lUU">
